# Interactive_Story_Builder

./: README.md
backend/: .env  database.db  main.py  pyproject.toml  requirements.txt
backend/core/: config.py  models.py  story_generator.py
backend/models/: job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: job.py  story.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: LoadingStatus.jsx  StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx  ThemInput.jsx
